--- a/index.html
+++ b/index.html
@@ -4,29 +4,58 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
+  <!-- bootstap scripts -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <!-- Font-awesome -->
+  <script src="https://kit.fontawesome.com/ea63660eb7.js" crossorigin="anonymous"></script>
+  <!-- Google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu&display=swap" rel="stylesheet">
+  <!-- Style sheets -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
   <section id="title">
-
-    <!-- Nav Bar -->
-
+    <div class="container-fluid">
 
 
+      <!-- Nav Bar -->
+      <nav class="navbar navbar-expand-lg navbar-dark">
+          <a class="navbar-brand" href=""><i class="fa-solid fa-paw">&nbsp</i>tindog</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">Download</a>
+              </li>
+            </ul>
+          </div>
+      </nav>
 
-    <!-- Title -->
-
-    <div>
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+      <!-- Title -->
+      <div class="row">
+        <div class="col-lg-6 header-txt">
+          <h1>Meet new and interesting dogs nearby.</h1>
+          <button type="button" class="btn btn-lg btn-dark download-btn"><i class="fa-brands fa-apple">&nbsp</i>Download</button>
+          <button type="button" class="btn btn-lg btn-outline-light download-btn"><i class="fa-brands fa-windows"></i> Download</button>
+        </div>
+        <div class="col-lg-6 img-class">
+          <img src="images/iphone6.png" class = "bruno-img" alt="iphone-mockup">
+        </div>
+      </div>
     </div>
-    <div>
-      <img src="images/iphone6.png" alt="iphone-mockup">
-    </div>
-
   </section>
 
 
