--- a/index.html
+++ b/index.html
@@ -19,38 +19,40 @@
 
 <body>
 
-  <section id="title">
+  <section class="color-section" id="title">
+    <div class="container-fluid">
 
-    <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <a class="navbar-brand" href=""><i class="fa-solid fa-paw">&nbsp</i>tindog</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Download</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+      <!-- Nav Bar -->
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href=""><i class="fa-solid fa-paw">&nbsp</i>tindog</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Download</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
-    <!-- Title -->
-    <div class="row">
-      <div class="col-lg-6 header-txt">
-        <h1>Meet new and interesting dogs nearby.</h1>
-        <button type="button" class="btn btn-lg btn-dark download-btn"><i class="fa-brands fa-apple">&nbsp</i>Download</button>
-        <button type="button" class="btn btn-lg btn-outline-light download-btn"><i class="fa-brands fa-windows"></i> Download</button>
-      </div>
-      <div class="col-lg-6">
-        <img src="images/iphone6.png" class="bruno-img" alt="iphone-mockup">
+      <!-- Title -->
+      <div class="row">
+        <div class="col-lg-6 header-txt">
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
+          <button type="button" class="btn btn-lg btn-dark download-btn"><i class="fa-brands fa-apple">&nbsp</i>Download</button>
+          <button type="button" class="btn btn-lg btn-outline-light download-btn"><i class="fa-brands fa-windows"></i> Download</button>
+        </div>
+        <div class="col-lg-6">
+          <img src="images/iphone6.png" class="bruno-img" alt="iphone-mockup">
+        </div>
       </div>
     </div>
   </section>
@@ -58,22 +60,26 @@
 
   <!-- Features -->
 
-  <section id="features">
-    <div class="row">
-      <div class="col-md-4 feature-item">
-        <i class="fa-solid fa-circle-check icon"></i>
-        <h3>Easy to use.</h3>
-        <p>So easy to use, even your dog could do it.</p>
-      </div>
-      <div class="col-md-4 feature-item">
-        <i class="fa-solid fa-bullseye icon"></i>
-        <h3>Elite Clientele</h3>
-        <p>We have all the dogs, the greatest dogs.</p>
-      </div>
-      <div class="col-md-4 feature-item">
-        <i class="fa-solid fa-heart icon"></i>
-        <h3>Guaranteed to work.</h3>
-        <p>Find the love of your dog's life or your money back.</p>
+  <section class="white-section" id="features">
+    <div class="container-fluid">
+
+
+      <div class="row">
+        <div class="col-md-4 feature-item">
+          <i class="fa-solid fa-circle-check icon"></i>
+          <h3 class="feature-head">Easy to use.</h3>
+          <p>So easy to use, even your dog could do it.</p>
+        </div>
+        <div class="col-md-4 feature-item">
+          <i class="fa-solid fa-bullseye icon"></i>
+          <h3 class="feature-head">Elite Clientele</h3>
+          <p>We have all the dogs, the greatest dogs.</p>
+        </div>
+        <div class="col-md-4 feature-item">
+          <i class="fa-solid fa-heart icon"></i>
+          <h3 class="feature-head">Guaranteed to work.</h3>
+          <p>Find the love of your dog's life or your money back.</p>
+        </div>
       </div>
     </div>
   </section>
@@ -81,22 +87,23 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="color-section" id="testimonials">
 
     <div id="testimonial-carousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+
+        <div class="container-fluid carousel-item active">
+          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img class="testionial-img" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
-        <div class="carousel-item">
-          <h2>My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+        <div class="container-fluid carousel-item">
+          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
           <img class="testionial-img" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
-        <div class="carousel-item">
-          <h2>My munchkin found the cutest pug dog mate for himself and we cant be more happy. Love Tindog !!</h2>
+        <div class="container-fluid carousel-item">
+          <h2 class="testimonial-text">My munchkin found the cutest pug dog mate for himself and we cant be more happy. Love Tindog !!</h2>
           <img class="testionial-img" src="images/testimony3.png" alt="bruni-profile">
           <em>Himanshu, India</em>
         </div>
@@ -116,8 +123,8 @@
 
   <!-- Press -->
 
-  <section id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+  <section class="color-section" id="press">
+    <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
@@ -127,9 +134,9 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
 
@@ -137,10 +144,10 @@
       <div class="pricing-card col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3>Chihuahua</h3>
+            <h3 class="package">Chihuahua</h3>
           </div>
           <div class="d-grid card-body">
-            <h2>Free</h2>
+            <h2 class="pricing-text">Free</h2>
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
@@ -151,10 +158,10 @@
       <div class="pricing-card col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3>Labrador</h3>
+            <h3 class="package">Labrador</h3>
           </div>
           <div class="d-grid card-body">
-            <h2>$49 / mo</h2>
+            <h2 class="pricing-text">$49 / mo</h2>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
@@ -165,10 +172,10 @@
       <div class="pricing-card col-lg-4">
         <div class="card">
           <div class="card-header">
-            <h3>Mastiff</h3>
+            <h3 class="package">Mastiff</h3>
           </div>
           <div class="d-grid card-body">
-            <h2>$99 / mo</h2>
+            <h2 class="pricing-text">$99 / mo</h2>
             <p>Pirority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
@@ -183,26 +190,27 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
-
-    <h3 class="cta-text">Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class="btn btn-lg btn-dark download-btn"><i class="fa-brands fa-apple">&nbsp</i>Download</button>
-    <button type="button" class="btn btn-lg btn-light download-btn"><i class="fa-brands fa-windows"></i> Download</button>
-
+  <section class="color-section" id="cta">
+    <div class="container-fluid">
+      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <button type="button" class="btn btn-lg btn-dark download-btn"><i class="fa-brands fa-apple">&nbsp</i>Download</button>
+      <button type="button" class="btn btn-lg btn-light download-btn"><i class="fa-brands fa-windows"></i> Download</button>
+    </div>
   </section>
 
 
   <!-- Footer -->
 
-  <footer id="footer">
-    <p>
-      <i class="footer-icon fa-brands fa-twitter"></i>
-      <i class="footer-icon fa-brands fa-facebook"></i>
-      <i class="footer-icon fa-brands fa-instagram"></i>
-      <i class="footer-icon fa-solid fa-envelope"></i>
-    </p>
-    <p>© Copyright 2022 TinDog</p>
-
+  <footer class="white-section" id="footer">
+    <div class="container-fluid">
+      <p>
+        <i class="footer-icon fa-brands fa-twitter"></i>
+        <i class="footer-icon fa-brands fa-facebook"></i>
+        <i class="footer-icon fa-brands fa-instagram"></i>
+        <i class="footer-icon fa-solid fa-envelope"></i>
+      </p>
+      <p>© Copyright 2022 TinDog</p>
+    </div>
   </footer>
 
 
